Fixed several alignment issues

--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ body {
     flex-direction: column;
 }
 .content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     flex: 1 0 auto;
 }
 .footer {
@@ -18,12 +21,17 @@ body {
     align-items: center;
     background-color: black;
     padding: 20px;
+    width: 50%;
 }
 
 .calcScreen {
+    display: flex;
     width: 400px;
-    height: 400px;
+    height: 100px;
+    text-align: right;
     background-color: white;
     word-wrap: break-word;
     word-break: break-all;
+    padding: 10px;
+    margin: 20px;
 }
